<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_runtime</name>
  <version>2.7.1</version>
  <description>moveit_runtime meta package contains MoveIt packages that are essential for its runtime (e.g. running MoveIt on robots).</description>
  <maintainer email="henningkayser@picknik.ai">Henning Kayser</maintainer>
  <maintainer email="tyler@picknik.ai">Tyler Weaver</maintainer>

  <license>BSD-3-Clause</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="website">http://wiki.ros.org/moveit_runtime</url>

  <author email="gm130s@gmail.com">Isaac I. Y. Saito</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_plugins</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_warehouse</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
