<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_setup_assistant</name>
  <version>2.5.0</version>
  <description>Generates a configuration package that makes it easy to use MoveIt</description>
  <maintainer email="henningkayser@picknik.ai">Henning Kayser</maintainer>
  <maintainer email="tyler@picknik.ai">Tyler Weaver</maintainer>
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt Release Team</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit2/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit2</url>

  <author email="dave@picknik.ai">Dave Coleman</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_common</depend>
  <build_depend>ompl</build_depend>

  <depend>ament_index_cpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>yaml-cpp</depend>
  <depend>srdfdom</depend>

  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>moveit_resources_panda_moveit_config</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
